# drones-267

./: .gitignore  LICENSE.txt  README.md  Vagrantfile
code/debugger/: CMakeLists.txt  Debugger.cpp
code/hoverer/: CMakeLists.txt  Controller.cpp  Controller.h  Hoverer.cpp  HovererStates.cpp  HovererStates.h  QuadcopterState.cpp  QuadcopterState.h  package.xml
code/lander/: CMakeLists.txt  Controller.cpp  Lander.cpp  LanderStates.cpp  QuadcopterState.cpp  QuadcopterState.h  package.xml
code/pose_estimator/: CMakeLists.txt  Corners.cpp  Corners.h  DemoPoseFromImages.cpp  Geometry.cpp  PoseEstimator.cpp  Profiling.cpp  Profiling.h  TestCornersFromCamera.cpp  TestCornersFromImages.cpp  TestPoseFromCamera.cpp  TestPoseFromImages.cpp
misc/performance/: beaglebone-with-neon.txt  beaglebone-without-neon-native-opencv.txt  beaglebone-without-neon.txt  desktop.txt  maximum-performance.md  odroid-without-neon.txt  odroid.txt  results.xlsx  sanitise-file.sh
misc/performance/naive/: results.xlsx  sanitise-files.sh  tests.md
misc/performance/naive/beaglebone/neon+tbb+libjpeg-turbo/: frame.txt  frame.txt-detectCorners  frame.txt-overall  no-frame.txt  no-frame.txt-detectCorners  no-frame.txt-overall
misc/performance/naive/desktop/: frame.txt  frame.txt-detectCorners  frame.txt-overall  no-frame.txt  no-frame.txt-detectCorners  no-frame.txt-overall
notes/: frequency-scaling.md  installing-opencv  installing-opencv.md
presentations/parallel-poster/: autonomous-landing.ppt
scripts/: bootstrap.sh
writeups/diagrams/: Flowchart.vsdx
writeups/parallel-proposal/: Makefile  proposal.tex
writeups/parallel-proposal/bib/: proposal.bib
writeups/parallel-report/: acm_proc_article-sp.cls  citations.txt  report.bib  report.tex
(+120 files in other folders)
