<?xml version="1.0"?>
<package>
  <name>lander</name>
  <version>0.0.0</version>
  <description>High level lander that uses roscopter to bring a quadcopter to the ground using pose estimates.</description>

  <maintainer email="cberzan@gmail.com">cberzan</maintainer>
  <maintainer email="git@ss21k.co.uk">ssk2</maintainer>
  <maintainer email="nahush.nnb@gmail.com">nbhanage</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscopter</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscopter</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
